--- a/comparePast.html
+++ b/comparePast.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <header class="header container">
-            <a class="header__logo" href="/overview.html">Foton</a>
+            <a class="header__logo" href="/index.html">Foton</a>
             <ul class="header__nav">
-                <a href="/overview.html">Overview</a>
+                <a href="/index.html">Overview</a>
                 <a class="activeNav" href="/comparePast.html"
                     >Compare with the past</a
                 >
