--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <header class="header container">
-            <a class="header__logo" href="/overview.html">Foton</a>
+            <a class="header__logo" href="/index.html">Foton</a>
             <ul class="header__nav">
-                <a class="activeNav" href="/overview.html">Overview</a>
+                <a class="activeNav" href="/index.html">Overview</a>
                 <a href="/comparePast.html">Compare with the past</a>
                 <a href="/compareCompetitors.html">Compare with competitors</a>
             </ul>
